film strip render

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             <button id="refreshButton" class="btn btn-secondary" onclick="refreshImages()">Refresh</button>
             <button id="previewButton" class="btn btn-secondary" onclick="previewDraw()">Preview</button>
         </div>
+        <div style="border: 1px solid #ccc; border-radius: 1em; overflow-x: scroll;">
+            <img src="#" alt="" id="filmstripimg">
+        </div>
         <canvas class="my-3" id="p5canvas"></canvas>
     </div>
 </div>
