--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <body>
     <div class="container">
         <h1 class="mt-5">Contact Sheet Generator</h1>
-        <p>
-            Celebrating film photography, this tool generates a contact sheet from a folder of images with realistic
-            film borders.
-        </p>
+        <p>This tool generates a contact sheet from a folder of images with realistic
+            film borders.</p>
+        <p>It is currently in development, version 0.0. Made by <a href="https://muchen.ca">Muchen</a>.</p>
+        <p>To use, upload a folder of pictures (recommended between 12-40). You'll get a image preview once all images are done loading. Click the "Preview" button to preview the filmstrip.</p>
 
         <h3 class="mt-4">Image uploads</h3>
         <input type="file" id="imageFolderInput" webkitdirectory mozdirectory msdirectory odirectory directory multiple
@@ -40,7 +40,7 @@
         </div>
 
         <h3 class="mt-4">Filmstrip preview</h3>
-        <div id="filmstripPreview" class="mt-4">
+        <div id="filmstripPreview" class="mt-4 disabled">
             <div class="my-3">
                 <button id="refreshButton" class="btn btn-secondary" onclick="refreshImages()">Refresh</button>
                 <button id="previewButton" class="btn btn-secondary" onclick="previewDraw()">Preview</button>
@@ -50,6 +50,16 @@
             </div>
             <canvas class="my-3" id="p5canvas"></canvas>
         </div>
+
+        <h3>To-dos</h3>
+        <ul>
+            <li>Make actual contact sheet from filmstrip</li>
+            <li>Add loading/progress bars</li>
+            <li>Add options for output resolution</li>
+            <li>Add other film stocks</li>
+            <li>Add togglable options</li>
+            <li>Make this run faster</li>
+            <li>UI/UX design</li>
     </div>
 
     <!-- Bootstrap JS -->
