--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             class="btn btn-primary" />
 
         <h3 class="mt-4">Image previews</h3>
-        <div id="imagePreview" class="my-4 p-3 pb-5 disabled">
+        <div id="imagePreview" class="my-4 disabled">
             <p>No images</p>
         </div>
 
