--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <div class="title-bar-controls">
             <!-- <button aria-label="Minimize"></button>
             <button aria-label="Maximize"></button> -->
+            <button aria-label="Help" onclick="displayTodo()"></button>
             <button aria-label="Close"></button>
           </div>
         </div>
@@ -59,7 +60,6 @@
         <div class="title-bar">
             <div class="title-bar-text">Load Images</div>
             <div class="title-bar-controls">
-                <button aria-label="Help"></button>
                 <button onclick="reset()" aria-label="Close"></button>
             </div>
         </div>
@@ -184,12 +184,37 @@
         </div>
         <div class="window-body">
             <ul class="tree-view">
-                <li>Add loading/progress bars</li>
-                <li>Add options for output resolution</li>
-                <li>Add other film stocks</li>
-                <li>Add togglable options</li>
-                <li>Make this run faster</li>
-                <li>UI/UX design</li>
+                <li>Improve UI/UX
+                    <ul>
+                        <li><del>Add loading/progress bars</del></li>
+                        <li><del>Make it look more like Windows 98 (retro)</del></li>
+                        <li>Add fun decorations like Win98 desktop</li>
+                        <li>Improve user flow</li>
+                    </ul>
+                </li>
+                <li>
+                    Customizable options
+                    <ul>
+                        <li>Add options for output resolution</li>
+                        <li>Add other film stocks</li>
+                        <li>Add togglable options</li>
+                        <li>Add fun effects
+                            <ul>
+                                <li>Light leaks</li>
+                                <li>Scratches</li>
+                                <li>Grain</li>
+                                <li>Dusts</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+
+                <li>Improve performance
+                    <ul>
+                        <li>Make this run faster</li>
+                        <li>Clean up code</li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
