added start menu

--- a/index.html
+++ b/index.html
@@ -13,6 +13,44 @@
 
 <body>
 
+    <div class="ui-desktop" style="left: 0; top: 0;">
+		<div class="recycle-bin ui-icon">
+			<div class="ui-icon-container">
+				<img width="32" height="32" src="recycle_bin_empty_cool-5.png">
+				<span style="color:white;">Recycle Bin</span>
+			</div>
+		</div>
+		<div class="recycle-bin ui-icon">
+			<div class="ui-icon-container">
+				<img width="32" height="32" src="computer_explorer_cool-5.png">
+				<span style="color:white;">Computer</span>
+			</div>
+		</div>
+		<div class="recycle-bin ui-icon">
+			<div class="ui-icon-container">
+				<img width="32" height="32" src="directory_closed-3.png">
+				<span style="color:white;">Documents</span>
+			</div>
+		</div>
+		<div class="recycle-bin ui-icon">
+			<div class="ui-icon-container">
+				<a href="https://muchen.ca">
+					<img width="32" height="32" src="html2-1.png">
+					<span style="color:white;">muchen.ca</span>
+				</a>
+			</div>
+		</div>		
+	</div>
+
+    <div class="ui-desktop" style="left:256px; top:128px;">
+        <div class="recycle-bin ui-icon">
+			<div class="ui-icon-container">
+				<img width="32" height="32" src="sc3k.png">
+				<span style="color:white;">SimCity 3000</span>
+			</div>
+		</div>
+    </div>
+
     <div id="welcome" class="window mt-5 mx-auto" style="width: 600px">
         <div class="title-bar">
         
@@ -218,6 +256,23 @@
             </ul>
         </div>
     </div>
+
+    <div class="start-bar">
+		<a href="https://alexmeub.com/old-windows-icons/" title="Start Menu" class="button start-button-wrapper js-start-button" target="_blank">
+			<div class="start-button"></div>
+		</a>
+        <img class="start-bar-icon mr-2 ml-2" src="desktop_old-1.png" alt="">
+        <img class="start-bar-icon mr-2" src="msie2-1.png" "alt="">
+
+		<span class="start-bar-window mx-1">
+            <img class="start-bar-icon mr-2" src="msie2-1.png" alt="">Internet Explorer
+        </span>
+
+        <span class="start-bar-window active mx-1">
+            <img class="start-bar-icon mr-2" src="kodak_imaging-1.png" alt="">ContactSheet Generator v0.1
+        </span>
+
+	</div>
 
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
