--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
     </div>
 
-    <div class="window" id="upload">
+    <div class="window hidden" id="upload">
         <div class="title-bar">
             <div class="title-bar-text">Load Images</div>
             <div class="title-bar-controls">
@@ -115,7 +115,7 @@
         </div>  
     </div>
 
-    <div class="window" id="uploadProgress">
+    <div class="window hidden" id="uploadProgress">
         <div class="title-bar">
             <div class="title-bar-text">Processing</div>
         </div>
@@ -149,13 +149,13 @@
         </div>
     </div>
 
-    <div class="window" id="imagePreviewWindow">
+    <div class="window hidden" id="imagePreviewWindow">
         <div class="title-bar">
             <div class="title-bar-text">Image Preview</div>
                 <div class="title-bar-controls">
                 <button aria-label="Minimize"></button>
                 <button aria-label="Maximize"></button>
-                <button aria-label="Close"></button>
+                <button onclick="reset()" aria-label="Close"></button>
             </div>
         </div>
         <div class="window-body">
@@ -165,27 +165,30 @@
             </div>
 
             <section class="field-row">
-                <button id="imagePreviewCancel">Start Over</button>
-                <button id="imagePreviewProceed">Continue</button>
+                <!-- TODO: reset 2 -->
+                <button id="imagePreviewCancel" onclick="reset()">Start Over</button>
+                <button id="imagePreviewProceed" onclick="showFilmstrip()">Continue</button>
             </section>
         </div>
             
     </div>
 
-    <div class="window" id="filmstripPreviewWindow">
+    <div class="window hidden" id="filmstripPreviewWindow">
         <div class="title-bar">
             <div class="title-bar-text">Filmstrip Preview</div>
                 <div class="title-bar-controls">
                 <button aria-label="Minimize"></button>
                 <button aria-label="Maximize"></button>
-                <button aria-label="Close"></button>
+                <button onclick="hideFilmstrip()" aria-label="Close"></button>
             </div>
         </div>
         <div class="window-body">
             <div id="filmstripPreview">
                 <div class="my-3">
                     <button id="refreshButton" onclick="refreshImages()">Refresh</button>
-                    <button id="previewButton" onclick="previewDraw()">Preview</button>
+                    <button id="previewButton" onclick="previewDraw();">Preview</button>
+                    <button id="generateButton" onclick="showContactSheet();">Generate!</button>
+                    <!-- <p>Tip: use the scroll bar to scoll horizontally</p> -->
                 </div>
                 <div class="pb-2" style="overflow-x: scroll;">
                     <img src="#" alt="" id="filmstripimg">
@@ -195,13 +198,13 @@
         </div>
     </div>
 
-    <div class="window" id="contactSheetWindow">
+    <div class="window hidden" id="contactSheetWindow">
         <div class="title-bar">
             <div class="title-bar-text">Contact Sheet</div>
                 <div class="title-bar-controls">
                 <button aria-label="Minimize"></button>
                 <button aria-label="Maximize"></button>
-                <button aria-label="Close"></button>
+                <button onclick="hideContactSheet()" aria-label="Close"></button>
             </div>
         </div>
         <div class="window-body">
@@ -211,13 +214,13 @@
 
 
     <!-- todo -->
-    <div class="window" id="todoWindow">
+    <div class="window hidden" id="todoWindow">
         <div class="title-bar">
             <div class="title-bar-text">To Do</div>
                 <div class="title-bar-controls">
                 <button aria-label="Minimize"></button>
                 <button aria-label="Maximize"></button>
-                <button aria-label="Close"></button>
+                <button onclick="reset()" aria-label="Close"></button>
             </div>
         </div>
         <div class="window-body">
@@ -282,7 +285,6 @@
     <!-- p5.js -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
 
-    <script src="image_loader.js"></script>
     <script src="filmstock_properties.js"></script>
     <script src="dxcode.js"></script>
     <script src="contact_sheet.js"></script>
@@ -294,21 +296,65 @@
             // set mouse cursor to loading
             document.body.style.cursor = "wait";
             load_p5_resources();
+
             setTimeout(() => {
+                
                 document.getElementById("welcome").classList.add("inactive");
-                document.getElementById("main_container").classList.remove("hidden");
+                document.getElementById("upload").classList.remove("hidden");
                 document.getElementById("welcome-button").classList.remove("p-active");
                 document.body.style.cursor = "default";
-            }, 5000);
+            }, 400);
             // document.getElementById("welcome").classList.add("inactive");
             // document.getElementById("main_container").classList.remove("hidden");
         }
 
-        function reset() {
-            document.getElementById("main_container").classList.add("hidden");
-            document.getElementById("welcome").classList.remove("inactive");
+        function displayTodo() {
+            document.getElementById("todoWindow").classList.remove("hidden");
         }
+
+        function reset() {
+            document.getElementById("welcome").classList.remove("inactive");
+
+            document.getElementById("upload").classList.add("hidden");
+            document.getElementById("uploadProgress").classList.add("hidden");
+            document.getElementById("imagePreviewWindow").classList.add("hidden");
+            document.getElementById("filmstripPreviewWindow").classList.add("hidden");
+            document.getElementById("contactSheetWindow").classList.add("hidden");
+            document.getElementById("todoWindow").classList.add("hidden");
+        }
+
+        function startLoad() {
+            document.getElementById("upload").classList.add("inactive");
+            document.getElementById("uploadProgress").classList.remove("hidden");
+        }
+
+        function finishLoad() {
+            document.getElementById("uploadProgress").classList.add("hidden");
+            document.getElementById("imagePreviewWindow").classList.remove("hidden");
+        }
+
+        function showFilmstrip() {
+            document.getElementById("filmstripPreviewWindow").classList.remove("hidden");
+        }
+
+        function hideFilmstrip() {
+            document.getElementById("filmstripPreviewWindow").classList.add("hidden");
+        }
+
+        function showContactSheet() {
+            document.getElementById("contactSheetWindow").classList.remove("hidden");
+        }
+
+        function hideContactSheet() {
+            document.getElementById("contactSheetWindow").classList.add("hidden");
+        }
+
+        window.addEventListener("DOMContentLoaded", (event) => {
+            console.log("DOM fully loaded and parsed");
+            addUploaderEventListener();
+        });
     </script>
+    <script src="image_loader.js"></script>
 
 </body>
 
