--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
             console.log("DOM fully loaded and parsed");
             addUploaderEventListener();
         });
+        addUploaderEventListener();
     </script>
     <script src="image_loader.js"></script>
 
